Update branding: Add FoodExpress meta tags, improve logo alt text, update admin panel title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FoodExpress</title>
+    <meta name="description" content="FoodExpress - Fast & Fresh Food Delivery. Order your favorite food online with quick delivery." />
+    <meta name="keywords" content="food delivery, online food ordering, fast delivery, fresh food" />
+    <title>FoodExpress - Fast & Fresh Food Delivery</title>
   </head>
   <body>
     <div id="root"></div>
